// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaptionText should have correct classnames with bold enabled 1`] = `
<div>
  <p
    class="quill-typography quill-typography__caption-text__weight--bold__decoration--default quill-typography__color--prominent"
  >
    CaptionText content
  </p>
</div>
`;

exports[`CaptionText should have correct classnames with default values 1`] = `
<div>
  <p
    class="quill-typography quill-typography__caption-text__weight--regular__decoration--default quill-typography__color--prominent"
  >
    CaptionText content
  </p>
</div>
`;

exports[`CaptionText should have correct classnames with italic enabled 1`] = `
<div>
  <p
    class="quill-typography quill-typography__caption-text__weight--regular__decoration--italic quill-typography__color--prominent"
  >
    CaptionText content
  </p>
</div>
`;

exports[`CaptionText should have correct classnames with underline enabled 1`] = `
<div>
  <p
    class="quill-typography quill-typography__caption-text__weight--regular__decoration--underline quill-typography__color--prominent"
  >
    CaptionText content
  </p>
</div>
`;
